docdir = $(datadir)/doc/ax25apps/conf
doc_DATA = ax25ipd.conf.dist ax25mond.conf.dist ax25rtd.conf.dist 

vardir = $(AX25_LOCALSTATEDIR)/ax25rtd
var_DATA = ax25_route ip_route

EXTRA_DIST = $(doc_DATA) ax25_route ip_route


AX25_SYSCONFDIR = $(sysconfdir)/ax25
AX25_LOCALSTATEDIR = $(localstatedir)/ax25
